tests/purs/failing/UnsupportedRoleDeclarationTypeSynonym.purs
-- @shouldFailWith UnsupportedRoleDeclaration
module Main where

data A a = A

type B a = A a
type role B nominal
